# KineticParametricEngine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  error.txt
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs  camera.rs  commands.rs  document.rs  feature_commands.rs  gizmos.rs  io.rs  main.rs  sketch_editor.rs  sketch_render.rs  sync.rs
apps/desktop/src/plugins/: document_plugin.rs  gizmo_plugin.rs  mod.rs  sketch_editor_plugin.rs  ui_plugin.rs
apps/desktop/src/sketch_editor/: input.rs  math.rs  mod.rs  solver.rs  state.rs  ui.rs
apps/desktop/src/ui/: mod.rs  properties.rs  scene_tree.rs  status_bar.rs  toolbar.rs
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.ts  sketch-engine.ts  sketch-ui.ts
apps/web/src/sketch/: SketchEditor.tsx  index.ts
apps/web/src/sketch/constraints/: ConstraintGraph.ts  ConstraintSolver.ts  DOFTracker.ts
apps/web/src/sketch/constraints/constraints/: AngleDim.ts  Coincident.ts  Collinear.ts  Equal.ts  Fixed.ts  Horizontal.ts  LengthDim.ts  Parallel.ts  Perpendicular.ts  RadiusDim.ts  Symmetric.ts  Tangent.ts  Vertical.ts
apps/web/src/sketch/interaction/: CameraController.ts  HoverDetector.ts  InputHandler.ts  SelectionManager.ts
apps/web/src/sketch/model/: Constraint.ts  Entity.ts  SketchExport.ts  SketchHistory.ts  SketchModel.ts  SketchSerializer.ts
apps/web/src/sketch/renderer/: ConstraintVisual.ts  EntityMesh.ts  GridRenderer.ts  SketchRenderer.ts  SnapIndicator.ts
apps/web/src/sketch/snap/: CenterSnap.ts  EndpointSnap.ts  GridSnap.ts  IntersectionSnap.ts  MidpointSnap.ts  PerpendicularSnap.ts  SnapEngine.ts  SnapTypes.ts  TangentSnap.ts
apps/web/src/sketch/tools/: ArcTool.ts  CircleTool.ts  DimensionTool.ts  LineTool.ts  PolylineTool.ts  RectangleTool.ts  SelectTool.ts  ToolRegistry.ts  types.ts
apps/web/src/sketch/ui/: ConstraintMenu.tsx  ConstraintPanel.tsx  DimensionInput.tsx  SketchPropertiesPanel.tsx  SketchToolbar.tsx  StatusBar.tsx
apps/web/src/sketch/viewport3d/: ExtrudeBuilder.ts  Viewport3D.tsx
apps/web/src/wasm/: bridge.ts  index.ts
crates/kpe-cli/: Cargo.toml
crates/kpe-cli/src/: main.rs
crates/kpe-cli/src/export/: dxf.rs  mod.rs  step.rs
crates/kpe-fabrication/: Cargo.toml
crates/kpe-fabrication/src/: cutlist.rs  dxf.rs  grain.rs  lib.rs  nesting.rs  svg.rs
crates/kpe-geometry/: Cargo.toml
crates/kpe-geometry/benches/: csg.rs  sketch.rs
crates/kpe-geometry/src/: brep.rs  bvh.rs  classify.rs  csg.rs  evaluator.rs  extrude.rs  intersection.rs  joint.rs  lib.rs  mesh.rs  predicates.rs  push_pull.rs  sketch.rs  split.rs  stitch.rs  transform.rs
crates/kpe-geometry/src/sketch/: boolean.rs  constraints.rs  document.rs  entities.rs  inference.rs  mod.rs  plane.rs  solver.rs  spatial.rs
crates/kpe-material/: Cargo.toml
crates/kpe-material/src/: generator.rs  instance_vars.rs  lib.rs  text_overlay.rs  uv.rs
crates/kpe-parametric/: Cargo.toml
crates/kpe-parametric/src/: catalog.rs  condition.rs  expression.rs  lib.rs  rule_engine.rs  scene.rs  solver.rs
crates/kpe-parametric/src/commands/: features.rs  mod.rs
crates/kpe-parametric/src/history/: mod.rs
crates/kpe-schema/: Cargo.toml
crates/kpe-schema/src/: block.rs  constraint.rs  fabrication.rs  geometry.rs  joint.rs  lib.rs  material.rs  recipe.rs
crates/kpe-wasm/: Cargo.toml
crates/kpe-wasm/src/: api.rs  convert.rs  lib.rs
test_data/: box.dxf  box.json  box.step
wiki/: CAMERA.md  COMMAND_PATTERN.md  DATA_MODEL.md  FILE_FORMAT.md  KNOWN_ISSUES.md  MESH_PIPELINE.md  PROJECT_KNOWLEDGE.md  SELECTION.md  SKETCH_SYSTEM.md  UI_ARCHITECTURE.md
wiki/decisions/: 000-template.md  001-rust-as-core-language.md  002-manifold-for-csg.md  003-004-schema-and-transforms.md  005-mesh-csg-pipeline.md  006-sketch-extrude-pipeline.md
wiki/desktop/: ARCHITECTURE.md
wiki/diagrams/: architecture.md  data-flow.md  parametric-solver.md  sketch-extrude.md
wiki/recipes/: parametric-table.json
wiki/roadmaps/: KPE-desktop-roadmap.md  KPE-roadmap.md  KPE-vision-improvements.md  migration_execution_plan.md  sketch_engine_roadmap.md
wiki/scripts/: check_modularity.py  dep_graph.py  doc_coverage.py  find_type.py  find_usages.py
wiki/sketch/: README.md  extrude.md  primitives.md  revolve.md  sweep.md
wiki/sketch/examples/: curved-handrail.json  grooved-panel.json  helical-spring.json  table-leg.json
