[workspace]
resolver = "2"

members = [
    "crates/kpe-schema",
    "crates/kpe-parametric",
    "crates/kpe-geometry",
    "crates/kpe-fabrication",
    "crates/kpe-material",
    "crates/kpe-wasm",
    "crates/kpe-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
thiserror = "2"
wasm-bindgen = "0.2"

[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }
