[workspace]
resolver = "2"

members = [
    "crates/kpe-schema",
    "crates/kpe-parametric",
    "crates/kpe-geometry",
    "crates/kpe-fabrication",
    "crates/kpe-material",
    "crates/kpe-wasm",
    "crates/kpe-cli",
    "apps/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
thiserror = "2"
wasm-bindgen = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }

# Soluciona el error LNK1318 y acelera la ejecución de Bevy
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.package.kpe-app]
opt-level = 0
debug = true
