[package]
name = "kpe-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
kpe-schema    = { path = "../../crates/kpe-schema" }
kpe-geometry  = { path = "../../crates/kpe-geometry" }
kpe-parametric = { path = "../../crates/kpe-parametric" }
wgpu          = "24"
bevy          = "0.15"
bevy_egui     = "0.32"
glam          = { workspace = true }
tracing       = "0.1"
tracing-subscriber = "0.3"
rfd           = "0.15"
serde         = { workspace = true }
serde_json    = { workspace = true }
