[package]
name = "kpe-geometry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kpe-schema = { path = "../kpe-schema" }
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
robust = "1.2.0"
csgrs = "0.20.1"
nalgebra = "0.33"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "csg"
harness = false

[[bench]]
name = "sketch"
harness = false
