[package]
name = "kpe-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kpe-schema = { path = "../kpe-schema" }
kpe-parametric = { path = "../kpe-parametric" }
kpe-geometry = { path = "../kpe-geometry" }
kpe-fabrication = { path = "../kpe-fabrication" }
kpe-material = { path = "../kpe-material" }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }
